2002-06-07  Philippe Elie  <phil.el@wanadoo.fr>

	* libopt++/popt_options.cpp:
	* libopt++/popt_options.h: memory leak fix

2002-06-07  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/Makefile.in: fix bfd compilation problem
	  with gcc >= 3.0 and old bfd.h
	* module/Makefile.in:
	* module/x86/Makefile.in: fix -Werror typo
	* pp/op_merge.cpp:
	* pp/op_time_options.cpp:
	* pp/op_to_source_options.cpp:
	* pp/oprofpp_options.cpp: work around for cverb
	  initialisations and gcc 2.91.
	* pp/op_to_source.cpp: use the right comand line argument.

2002-06-07  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* libutil++/utility.h: fix stupid bug, add scoped_array

	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: use it

2002-06-07  John Levon  <moz@compsoc.man.ac.uk>

	* libutil++/utility.h: add a scoped_ptr

	* pp/op_to_source.cpp:
	* pp/samples_container.h:
	* pp/samples_container.cpp: use it

2002-06-07  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_kernel.c: remove some duplicate code
 
2002-06-07  John Levon  <moz@compsoc.man.ac.uk>

	* pp/opp_symbol.cpp: kill last of the accursed char
	  arrays

2002-06-07  John Levon  <moz@compsoc.man.ac.uk>

	* libutil++/op_bfd.cpp:
	* libutil++/op_bfd.h:
	* libutil++/verbose_ostream.h:
	* pp/op_merge.cpp:
	* pp/op_time_options.cpp:
	* pp/oprofpp_options.cpp:
	* pp/op_to_source_options.cpp: remove verbose_ostream
	  in favour of a much simpler solution
 
	* module/oprofile.h: remove dead prototype
 
2002-06-06  John Levon  <moz@compsoc.man.ac.uk>

	* module/x86/Makefile.in:
	* module/Makefile.in: remove 2.91 check, add 2.5 check
 
	* module/compat22.h:
	* module/compat24.h:
	* module/apic_up_compat.h: move to ...

	* module/x86/op_apic.h:
	* module/x86/apic_compat.h: ... here
 
	* module/compat.h: move arch stuff to ...

	* module/x86/arch_compat.h: ... here
 
2002-06-06  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: remove gcc 2.91 check
	* make.common.in: use -Werror even for gcc 2.91
	* gui/oprof_start.cpp: